--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -127,8 +127,8 @@
 }
 
 .homei:hover {
-  box-shadow: 0 2px 10px #2ab0ee;
-  background-color: #2ab0ee;
+  box-shadow: 0 2px 10px #22303c;
+  background-color: #22303c;
   color: #ffffff !important;
 }
 
@@ -139,8 +139,8 @@
 }
 
 .ec:hover {
-  box-shadow: 0 2px 10px #eb6559;
-  background-color: #eb6559;
+  box-shadow: 0 2px 10px #22303c;
+  background-color: #22303c;
   color: #ffffff !important;
 }
 
@@ -151,8 +151,8 @@
 }
 
 .xp:hover {
-  box-shadow: 0 2px 10px #f7b908;
-  background-color: #f7b908;
+  box-shadow: 0 2px 10px #22303c;
+  background-color: #22303c;
   color: #ffffff !important;
 }
 
@@ -163,8 +163,8 @@
 }
 
 .projects:hover {
-  box-shadow: 0 2px 10px #e44160;
-  background-color: #e44160;
+  box-shadow: 0 2px 10px #22303c;
+  background-color: #22303c;
   color: #ffffff !important;
 }
 
@@ -175,8 +175,8 @@
 }
 
 .cr:hover {
-  box-shadow: 0 1px 10px #47a148;
-  background-color: #47a148;
+  box-shadow: 0 1px 10px #22303c;
+  background-color: #22303c;
   color: #ffffff !important;
 }
 
