--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,9 +1,14 @@
 /* header */
+.navbar {
+  position: sticky; 
+  top: 0;
+  z-index: 10;
+}
 
 .header {
   display: block;
   max-width: 90%;
-  padding: 20px 10px;
+  padding: 5px 10px;
   margin: -10px auto;
 }
 
@@ -11,7 +16,12 @@
   margin: 0;
   padding: 10px;
   list-style: none;
-  overflow: hidden;
+  overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent; /* make scrollbar transparent */
 }
 
 .grey-color {
@@ -21,7 +31,6 @@
 .header li a {
   display: block;
   padding: 10px 20px;
-  /* color: black; */
   text-decoration: none;
 }
 
